Fix spacing between sections

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -28,7 +28,7 @@ header {
 }
 
 section {
-  margin-bottom: 12px;
+  margin-bottom: 24px;
 }
 
 nav .active:after {
